# docs/swagger.json
@@ -38,7 +38,7 @@
                 }
             }
         },
-        "/ws/{name}": {
+        "/ws": {
             "get": {
                 "description": "websocket chat endpoint to connect specified room",
                 "produces": [
@@ -48,6 +48,21 @@
                     "chat"
                 ],
                 "summary": "WebSocket chat",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Room to connect via ws",
+                        "name": "room",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Time to load history of messages (1h, 5m etc.)",
+                        "name": "time",
+                        "in": "query"
+                    }
+                ],
                 "responses": {}
             }
         }
